# CS574-NLP-Final-Project

./: .gitignore  README.md
GCN_NMT_RNNG/: for_check.py  stildes.dot  test.py  test.sh  train.py  uts.dot
GCN_NMT_RNNG/basic/: Model.ipynb
GCN_NMT_RNNG/data/: dev.en  dev.kr  dev.oracle.en  dev_origin.kr  experiment.en  experiment.kr  experiment.oracle.en  test.en  test.kr  test.oracle.en  test.oracle.kr  test_origin.kr  train.oracle.en  train_origin.kr
GCN_NMT_RNNG/data/en-kr/: .gitignore  README.md  parser.py
GCN_NMT_RNNG/data/new/: dev.oracle.kr  train.en
GCN_NMT_RNNG/data/parsers/: get_original.py  get_original_sets.py  morph.py  parser.py  parser1.py  plain_from_tagged.py
GCN_NMT_RNNG/data/processed/: dev.deprel.kr  dev.en  dev.kr  dev.oracle.en  train.deprel.kr  train.en  train.kr  train.oracle.en
GCN_NMT_RNNG/src/: Models.py  NMTRNNG.py  Translator.py  Vocabulary.py  for_check.py  stildes.dot  train.py  utils.py  uts.dot
gcn_to_rnng/: Model.ipynb
reference/neuralmonkey-emnlp_gcn/: README.md
reference/neuralmonkey-emnlp_gcn/neuralmonkey/: tf_utils.py
reference/neuralmonkey-emnlp_gcn/neuralmonkey/encoders/: gcn_encoder.py  sentence_encoder.py
reference/neuralmonkey-emnlp_gcn/neuralmonkey/evaluators/: beer.py  bleu_ref.py  multeval.py
reference/neuralmonkey-emnlp_gcn/tests/: gcn-artificial-data-test.ini
reference/nmtrnng/: AttentionBiEncDec.cpp  CMakeLists.txt  LSTM.cpp  LSTM.hpp  Makefile  NMTRNNG.cpp  NMTRNNG.hpp  SoftMax.cpp  Vocabulary.cpp
reference/nmtrnng/N3LP/: Affine.cpp
reference/pytorch-rnng/tests/: test_models.py
(+15 files in other folders)
